--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,17 @@ yarn-debug.log*
 
 /config/database.yml
 /spec
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
+.framgia-ci-reports/
+.framgia-ci-result.temp.yml
