--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,6 @@ config/environments/*.local.yml
 .framgia-ci-result.temp.yml
 
 .vscode
+
+# Ignore application configuration
+/config/application.yml
