--- a/.sun-ci.yml
+++ b/.sun-ci.yml
@@ -16,31 +16,31 @@ jobs:
     paths:
     - vendor/bundle
 
-- name: test:rspec
-  stage: test
-  image: sunci/ruby:3.0.2
-  services:
-  - image: mysql:5.7.22
-    name: mysql_test
-    environment:
-      MYSQL_DATABASE: db_test
-      MYSQL_USER: user_test
-      MYSQL_PASSWORD: password_test
-      MYSQL_ROOT_PASSWORD: password_test
-  before_script:
-  - bundle _2.1.4_ install --path vendor/bundle # _2.1.4_ if ruby 2.7.1 or 3.0.2
-  - bundle _2.1.4_ exec rake db:drop db:create db:migrate 
-  - mkdir .sun-ci
-  script:
-  - DISABLE_SPRING=1 bundle _2.1.4_ exec rspec --format html --out .sun-ci/rspec.html spec/ # _2.1.4_ if ruby 2.7.1 or 3.0.2
-  only:
-    branches:
-    - master
-  artifacts:
-    name: rspec_report
-    paths:
-    - .sun-ci
-    expires_in: 3 days
+# - name: test:rspec
+#   stage: test
+#   image: sunci/ruby:3.0.2
+#   services:
+#   - image: mysql:5.7.22
+#     name: mysql_test
+#     environment:
+#       MYSQL_DATABASE: db_test
+#       MYSQL_USER: user_test
+#       MYSQL_PASSWORD: password_test
+#       MYSQL_ROOT_PASSWORD: password_test
+#   before_script:
+#   - bundle _2.1.4_ install --path vendor/bundle # _2.1.4_ if ruby 2.7.1 or 3.0.2
+#   - bundle _2.1.4_ exec rake db:drop db:create db:migrate
+#   - mkdir .sun-ci
+#   script:
+#   - DISABLE_SPRING=1 bundle _2.1.4_ exec rspec --format html --out .sun-ci/rspec.html spec/ # _2.1.4_ if ruby 2.7.1 or 3.0.2
+#   only:
+#     branches:
+#     - master
+#   artifacts:
+#     name: rspec_report
+#     paths:
+#     - .sun-ci
+#     expires_in: 3 days
 
 - name: test:rubocop
   stage: test
