--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,3 +4,10 @@ image:
     size: 50
 pagy:
   soccer_fields: 10
+regex:
+  email_regex: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/i
+valid:
+  name_max_len: 50
+  email_max_len: 255
+  password_min_len: 6
+  password_max_len: 20
