--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "@types/jquery": "^3.5.14",
     "bootstrap": "3.4.1",
-    "jquery": "3.4.1",
-    "popper.js": "^1.16.1",
+    "jquery-datetimepicker": "^2.5.21",
+    "jquery-ui-dist": "^1.13.2",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
